@@ -41,7 +41,8 @@ analyzeFrame = function(frame, bin, freqs,
   if (is.null(cutFreq)) {
     absSpec_cut = absSpec
   } else {
-    absSpec_cut = absSpec[absSpec$freq < cutFreq, ]
+    absSpec_cut = absSpec[absSpec$freq > cutFreq[1] &
+                            absSpec$freq < cutFreq[2], ]
     # Above 5-6 kHz or so, spectral energy depends too much on the original
     # sampling rate, noises etc. Besides, those frequencies are not super
     # relevant to human vocalizations in any case. So we cut away all info above
@@ -335,8 +336,12 @@ summarizeAnalyze = function(
 #' @param result the matrix of results returned by analyze()
 #' @param pitch_true manual pitch contour of length nrow(result), with NAs
 #' @param spectrogram spectrogram with ncol = nrow(result)
+#' @param freqs frequency labels of spectrogram bins
+#' @param bin spectrogram bin width
 #' @param harmHeight_pars same as argument "harmHeight" to analyze() - a list of
 #'   settings passed to soundgen:::harmHeight()
+#' @param smooth,smoothing_ww,smoothingThres smoothing parameters
+#' @param varsToUnv set these variables to NA in unvoiced frames
 #' @keywords internal
 updateAnalyze = function(
   result,
@@ -348,7 +353,7 @@ updateAnalyze = function(
   smooth,
   smoothing_ww,
   smoothingThres,
-  varsToUnv = c('amplVoiced', 'roughnessVoiced', 'quartile25', 'quartile50', 'quartile75')
+  varsToUnv = NULL
 ) {
   # remove all pitch-related columns except dom
   result = result[-which(grepl('pitch', colnames(result)))]
